# PeepSDL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Exceptions.h
include/class/: Audio.h  Color.h  Gamestate.h  Random.h  Rect.h  Text.h  Texture.h  Transform.h  Window.h
samples/: README.md
samples/basic_window/: CMakeLists.txt  README.md  main.cpp
samples/rectangles_and_text/: README.md  main.cpp
src/class/: Audio.cpp  Color.cpp  Gamestate.cpp  Random.cpp  Rect.cpp  Text.cpp  Texture.cpp  Transform.cpp  Window.cpp
testing/: CMakeLists.txt  README.md  main.cpp
